--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
 <body> 
     <div class="container-fluid">
         <div class="row">
-            <div class="side col-md-3"></div>
-            <div class="mid col-md-6">
+            <div class="side col-lg-3"></div>
+            <div class="mid col-lg-6">
                 <h1 class = "name text-center">ramen</h1>
                 <img class="icon d-block mx-auto img-circle rounded-circle Spacing" src="me.png" style="width:150px;">
                 <table class="table table-striped">
@@ -34,7 +34,7 @@
                         <td>2021/4/1</td>
                       </tr>
                       <tr>
-                        <td>represent first-year students at Digital Works</td>
+                        <td>represent 1st year student at Digital Works</td>
                         <td>2022/2/3</td>
                       </tr>
                       <tr>
@@ -44,12 +44,21 @@
                     </tbody>
                   </table>
             </div>
-            <div class="side col-md-3" ></div>
+            <div class="side col-lg-3" ></div>
         </div>
         <footer>
-            <a href="https://github.com/ramen0702">
+          <div class="right box">
+            <div class="sns">
+              <a href="https://github.com/ramen0702">
                 <img src="github.png" style="width:40px;">
+              </a>
+          </div>
+          <div class="sns">
+            <a href="https://www.instagram.com/masaaa0702/">
+              <img src="Instagram.png" style="width:40px;">
             </a>
+          </div>
+          </div>
         </footer>
     </div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
