[add]add GreetingText

--- a/index.html
+++ b/index.html
@@ -15,34 +15,37 @@
         <div class="row">
             <div class="side col-lg-3"></div>
             <div class="mid col-lg-6">
-                <h1 class = "name text-center">ramen</h1>
-                <img class="icon d-block mx-auto img-circle rounded-circle Spacing" src="me.png" style="width:150px;">
-                <table class="table table-striped">
-                    <thead>
-                      <tr>
-                        <th scope="col">Bio</th>
-                        <th scope="col"></th>
-                      </tr>
-                    </thead>
-                    <tbody>
-                      <tr>
-                        <td>born in Hyogo,Japan</td>
-                        <td>2002/7/2</td>
-                      </tr>
-                      <tr>
-                        <td>Enroll in Kobe Institute of Computing</td>
-                        <td>2021/4/1</td>
-                      </tr>
-                      <tr>
-                        <td>represent 1st year student at Digital Works</td>
-                        <td>2022/2/3</td>
-                      </tr>
-                      <tr>
-                        <td>IT Field 1st & 2nd Year Program Contest #5</td>
-                        <td>2022/2/5</td>
-                      </tr>
-                    </tbody>
-                  </table>
+              <h1 class = "name text-center">ramen</h1>
+              <img class="icon d-block mx-auto img-circle rounded-circle Spacing" src="me.png" style="width:150px;">
+              <h6 class="text-center">Hello!</h6>
+              <p class="text-center">I am a student studying programming in Hyogo, Japan.<br>
+              You can take a look at my repository if you like.</p>
+
+              <table class="table table-striped">
+                <thead>
+                  <tr>
+                    <th scope="col" colspan="2" class="text-center">Bio</th>
+                  </tr>
+                </thead>
+                <tbody>
+                  <tr>
+                    <td>born in Hyogo,Japan</td>
+                    <td>2002/7/2</td>
+                  </tr>
+                  <tr>
+                    <td>Enroll in Kobe Institute of Computing</td>
+                    <td>2021/4/1</td>
+                  </tr>
+                  <tr>
+                    <td>represent 1st year student at Digital Works</td>
+                    <td>2022/2/3</td>
+                  </tr>
+                  <tr>
+                    <td>IT Field 1st & 2nd Year Program Contest #5</td>
+                    <td>2022/2/5</td>
+                  </tr>
+                </tbody>
+              </table>
             </div>
             <div class="side col-lg-3" ></div>
         </div>
