[add]add night mode button

--- a/index.html
+++ b/index.html
@@ -14,62 +14,68 @@
 </head>
 <body> 
     <div class="container-fluid">
+      <header>
+        <input id="btn-mode" type="checkbox"> ダークモード
+      </header>
+      <main>
         <div class="row">
-            <div class="col-lg-3"></div>
-            <div class="col-lg-6">
-              <!-- MY NAME -->
-              <h1 class = "mt-1 text-center">ramen</h1>
-              <!-- MY ICON -->
-              <img class="mt-4 mb-5 d-block mx-auto img-circle rounded-circle Spacing" src="me.png" style="width:150px;">
-              <!-- GREETING TEXT -->
-              <h6 class="text-center">Hello!</h6>
-              <p class="text-center">I am a student studying programming in Hyogo, Japan.<br>
-              You can take a look at my repository if you like.</p>
-              <!-- BIO -->
-              <table class="table table-striped">
-                <thead>
-                  <tr>
-                    <th colspan="2" class="text-center">Bio</th>
-                  </tr>
-                </thead>
-                <tbody>
-                  <tr>
-                    <td>born in Hyogo,Japan</td>
-                    <td>2002/7/2</td>
-                  </tr>
-                  <tr>
-                    <td>Enroll in Kobe Institute of Computing</td>
-                    <td>2021/4/1</td>
-                  </tr>
-                  <tr>
-                    <td>represent 1st year student at Digital Works</td>
-                    <td>2022/2/3</td>
-                  </tr>
-                  <tr>
-                    <td>IT Field 1st & 2nd Year Program Contest #5</td>
-                    <td>2022/2/5</td>
-                  </tr>
-                </tbody>
-              </table>
-            </div>
-            <div class="col-lg-3" ></div>
+          <div class="col-lg-3"></div>
+          <div class="col-lg-6">
+            <!-- MY NAME -->
+            <h1 class = "mt-1 text-center">ramen</h1>
+            <!-- MY ICON -->
+            <img class="mt-4 mb-5 d-block mx-auto img-circle rounded-circle Spacing" src="me.png" style="width:150px;">
+            <!-- GREETING TEXT -->
+            <h6 class="text-center">Hello!</h6>
+            <p class="text-center">I am a student studying programming in Hyogo, Japan.<br>
+            You can take a look at my repository if you like.</p>
+            <!-- BIO -->
+            <table class="table table-striped">
+              <thead>
+                <tr>
+                  <th colspan="2" class="text-center">Bio</th>
+                </tr>
+              </thead>
+              <tbody>
+                <tr>
+                  <td>born in Hyogo,Japan</td>
+                  <td>2002/7/2</td>
+                </tr>
+                <tr>
+                  <td>Enroll in Kobe Institute of Computing</td>
+                  <td>2021/4/1</td>
+                </tr>
+                <tr>
+                  <td>represent 1st year student at Digital Works</td>
+                  <td>2022/2/3</td>
+                </tr>
+                <tr>
+                  <td>IT Field 1st & 2nd Year Program Contest #5</td>
+                  <td>2022/2/5</td>
+                </tr>
+              </tbody>
+            </table>
+          </div>
+          <div class="col-lg-3" ></div>
         </div>
-        <footer>
-          <!-- MY SNS -->
-          <div class="mx-2 my-1" style="float: right;">
-            <a href="https://github.com/ramen0702">
-              <img src="github.png" style="width:40px;">
-            </a>
-          </div>
-          <div class="mx-2 my-1" style="float: right;">
-            <a href="https://www.instagram.com/masaaa0702/">
-              <img src="Instagram.png" style="width:40px;">
-            </a>
-          </div>
-        </footer>
+      </main>
+      <footer>
+        <!-- MY SNS -->
+        <div class="mx-2 my-1" style="float: right;">
+          <a href="https://github.com/ramen0702">
+            <img src="github.png" style="width:40px;">
+          </a>
+        </div>
+        <div class="mx-2 my-1" style="float: right;">
+          <a href="https://www.instagram.com/masaaa0702/">
+            <img src="Instagram.png" style="width:40px;">
+          </a>
+        </div>
+      </footer>
     </div>
     <!-- SETTING JQUERY AND BOOTSTRAP -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
+    <script src="index.js"></script>
 </body>
 </html>
