--- a/index.html
+++ b/index.html
@@ -3,33 +3,43 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <!-- SETTING TITLE -->
+  <!-- Add title -->
   <title>ramen-Profile</title>
-  <!-- READ SOME BOOTSTRAP FILES -->
+  <!-- Read Bootstrap file -->
   <link href="css/bootstrap.min.css" rel="stylesheet">
-  <!-- READ THE STYLESHEET FILE -->
+  <!-- Read stylesheet file -->
   <link href="style.css" rel="stylesheet">
-  <!-- SETTING FAVICON -->
+  <!-- Set favicon -->
   <link rel="shortcut icon" href="favicon.ico">
 </head>
 <body> 
-    <div class="container-fluid">
-      <header>
-        <input id="btn-mode" type="checkbox"> ダークモード
-      </header>
-      <main>
+    <header>
+      <!-- Add DarkMode button -->
+      <div class="container-fluid">
+        <div class="row">
+          <div class="col-xl-10 col-lg-9	col-md-9 col-sm-8 col-7"></div>
+          <div class="col-xl-2 col-lg-3	col-md-3 col-sm-4 col-5" >
+            <div class="cp_ipcheck">
+              <input id="btn-mode" type="checkbox"><label for="btn-mode">DarkMode</label>
+            </div>
+          </div>
+        </div>
+      </div>
+    </header>
+    <main>
+      <div class="container-fluid">
         <div class="row">
           <div class="col-lg-3"></div>
           <div class="col-lg-6">
-            <!-- MY NAME -->
+            <!-- Add my name -->
             <h1 class = "mt-1 text-center">ramen</h1>
-            <!-- MY ICON -->
+            <!-- Add my picture -->
             <img class="mt-4 mb-5 d-block mx-auto img-circle rounded-circle Spacing" src="me.png" style="width:150px;">
-            <!-- GREETING TEXT -->
+            <!-- Add greeting text -->
             <h6 class="text-center">Hello!</h6>
             <p class="text-center">I am a student studying programming in Hyogo, Japan.<br>
             You can take a look at my repository if you like.</p>
-            <!-- BIO -->
+            <!-- Add bio -->
             <table class="table table-striped">
               <thead>
                 <tr>
@@ -58,24 +68,32 @@
           </div>
           <div class="col-lg-3" ></div>
         </div>
-      </main>
-      <footer>
-        <!-- MY SNS -->
-        <div class="mx-2 my-1" style="float: right;">
-          <a href="https://github.com/ramen0702">
-            <img src="github.png" style="width:40px;">
-          </a>
+      </div>
+    </main>
+    <footer>
+      <!-- Add my sns button -->
+      <div class="container-fluid">
+        <div class="row">
+          <div class="col-lg-11">
+            <div class="my-1" style="float: right;">
+              <a href="https://github.com/ramen0702">
+                <img src="github.png" style="width:40px;">
+              </a>
+            </div>
+            <div class="mx-3 my-1" style="float: right;">
+              <a href="https://www.instagram.com/masaaa0702/">
+                <img src="Instagram.png" style="width:40px;">
+              </a>
+            </div>
+          </div>
+          <div class="col-lg-1"></div>
         </div>
-        <div class="mx-2 my-1" style="float: right;">
-          <a href="https://www.instagram.com/masaaa0702/">
-            <img src="Instagram.png" style="width:40px;">
-          </a>
-        </div>
-      </footer>
-    </div>
-    <!-- SETTING JQUERY AND BOOTSTRAP -->
+      </div>
+    </footer>
+    <!-- Set jQuery and Bootstrap -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
+    <!-- Read JavaScript file -->
     <script src="index.js"></script>
 </body>
 </html>
