--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
               </thead>
               <tbody>
                 <tr>
-                  <td>born in Hyogo,Japan</td>
+                  <td>Born in Hyogo,Japan</td>
                   <td>2002/7/2</td>
                 </tr>
                 <tr>
@@ -56,7 +56,11 @@
                   <td>2021/4/1</td>
                 </tr>
                 <tr>
-                  <td>represent 1st year student at Digital Works</td>
+                  <td>Got FE (Fundamental Information Technology Engineer Examination)</td>
+                  <td>2021/6/28</td>
+                </tr>
+                <tr>
+                  <td>Represent 1st year student at Digital Works</td>
                   <td>2022/2/3</td>
                 </tr>
                 <tr>
